# dstrack

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  cli.tape  codecov.yaml  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  release_drafter.yaml
.github/workflows/: bump.yaml  docs.yml  pre-commit.yaml  release.yaml  release_drafter.yaml  unittests.yaml
docs/: gen_logo.py  getting_started.md  index.md  roadmap.md
docs/API/: paths.md  readers.md  snapshot.md  store.md
docs/decision/: 0001-dataset-snapshot-content.md
docs/decisions/: 0001-dataset-snapshot-content.md  0002-bytes-dtype-not-supported-in-csv-reader.md  0003-local-snapshot-store-layout.md
docs/javascripts/: logo-animation.js
src/dstrack/: __init__.py  _cli.py  _log.py  _log_render.py  _logging.py  _store_template.py  _track.py  cache.py  console.py  errors.py  paths.py  store.py  utils.py
src/dstrack/_benchmark/: __init__.py  _cli.py  _environment.py  _profiling.py  _report.py  _runner.py  _synthetic.py
src/dstrack/readers/: __init__.py  _csv.py  _protocol.py  _registry.py  _resolve.py
src/dstrack/schemas/: snapshot_v1.json
src/dstrack/snapshot/: __init__.py  _builder.py  _metadata.py  _stats.py  _version.py
tests/: smoke_test.py  test_benchmark_cli.py  test_cli.py  test_log.py  test_logging.py  test_paths.py  test_reader_registry.py  test_readers.py  test_schemas.py  test_snapshot_metadata.py  test_snapshot_stats.py  test_store.py  test_store_template.py  test_track.py
